# grpc-grocery-store

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: store.proto
src/: cli.rs  main.rs  server.rs
